TestSuite/errors/err0373_op.pas
begin 
  var (a, b) := (1, 2);
  integer.operator+=(a, b).Print;
end.